2000-01-16  Keiichi Suzuki  <keiichi@nanap.org>

	* mime-w3.el (mime-preview-text/html): Don't get root entity from
	`mime-entity-buffer'.

2000-01-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* Makefile, README.en: Update for the new CVS server.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en: Update for the recent ML address and ftp site.

1999-11-10  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-play.el: (mime-save-directory): New variable.
	(mime-save-content): Don't force filename parameter to be used.

1999-11-09  Katsumi Yamaoka   <yamaoka@jpl.org>

	* semi-def.el (mime-insert-button): Simplify.
	(mime-create-button-function): To share the customizing widget.
	(mime-create-xpm-button): Replace with `mime-create-widget-button'
	if the feature `xpm' is not provided or the TTY frame is used; add
	doc string.
	(mime-create-widget-button): Add doc string.

1999-11-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* semi-def.el (mime-insert-button): Don't use xpm buttons under TTY.
	(mime-create-xpm-button): Use `mime-xpm-button-glyph-cache'.
	(mime-xpm-button-glyph-cache): New variable.
	(TopLevel): Don't use xpm buttons if the feature `xpm' is not
	provided.
	(TopLevel): Require `alist'.

1999-11-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* semi-def.el (mime-insert-button): Funcall
	`mime-create-button-function'.
	(mime-create-button-function): New user option.
	(mime-create-xpm-button): New function.
	(mime-xpm-button-background): New user option.
	(mime-xpm-button-foreground): New user option.
	(mime-xpm-button-shadow-thickness): New user option.
	(mime-create-widget-button): New function.
	(mime-button-mouse-face, mime-button-face): Remove.

	* mime-ui-ja.texi (mime-button-mouse-face, mime-button-face):
	Remove.
	* mime-ui-ja.sgml: Likewise.
	* mime-ui-en.texi: Likewise.
	* mime-ui-en.sgml: Likewise.

1999-11-01  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-view.el (mime-display-application/x-postpet): New function.